<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/showScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/nameView"
            android:layout_width="278dp"
            android:layout_height="67dp"
            android:layout_marginTop="32dp"
            android:text="@string/nameView"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/shopView"
            android:layout_width="369dp"
            android:layout_height="113dp"
            android:layout_marginTop="8dp"
            android:text="@string/shopView"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#FB1100"
            android:textSize="34sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameView" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="401dp"
            android:layout_height="159dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shopView"
            app:lottie_autoPlay="false"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/animation_coctail"
            tools:ignore="MissingClass,MissingConstraints" />

        <Button
            android:id="@+id/showButton"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/buttonText2"
            app:icon="@drawable/baseline_public_24"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/animationView"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/phoneView"
            android:layout_width="229dp"
            android:layout_height="41dp"
            android:layout_marginTop="24dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/showButton"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/emailView"
            android:layout_width="229dp"
            android:layout_height="41dp"
            android:layout_marginTop="8dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneView"
            tools:ignore="MissingConstraints" />
        <TextView
            android:id="@+id/websiteView"
            android:layout_width="229dp"
            android:layout_height="41dp"
            android:layout_marginTop="8dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailView"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>